# DCSA

./: .gitignore  Dockerfile
.github/workflows/: ci.yaml
client/: .gitignore  CMakeLists.txt  Dockerfile
client/src/: main.cpp
lab_1/: CMakeLists.txt
lab_1/src/: HTTPServer.hpp  Routers.cpp  Routers.hpp  User.cpp  User.hpp
lab_2/server/src/: Routers.hpp
lab_2/server/src/base64/: Base64.hpp
lab_3/: create_debpkg.sh
lab_3/server/src/base64/: Base64.cpp
server/: .gitignore  CMakeLists.txt  Dockerfile
server/src/: HTTPAuth.cpp  HTTPAuth.hpp  HTTPServer.cpp  HTTPServer.hpp  Routers.cpp  Routers.hpp  User.cpp  User.hpp  main.cpp
